--- a/drivers/iommu/Kconfig
+++ b/drivers/iommu/Kconfig
@@ -439,9 +439,9 @@ config QCOM_IOMMU
 	bool "Qualcomm IOMMU Support"
 	depends on ARCH_QCOM || (COMPILE_TEST && !GENERIC_ATOMIC64)
 	depends on QCOM_SCM=y
+	depends on IOMMU_DMA
 	select IOMMU_API
 	select IOMMU_IO_PGTABLE_LPAE
-	select ARM_DMA_USE_IOMMU
 	help
 	  Support for IOMMU on certain Qualcomm SoCs.
 
