squash! MSM8916: iommu/qcom: Select IOMMU_DMA instead of ARM_DMA_USE_IOMMU (v2)
MSM8916: Select IOMMU_DMA instead of ARM_DMA_USE_IOMMU (v3)

v3: Move "select IOMMU_DMA" to CONFIG_ARCH_MSM8916

--- a/arch/arm/mach-qcom/Kconfig
+++ b/arch/arm/mach-qcom/Kconfig
@@ -32,6 +32,7 @@ config ARCH_MSM8974
 config ARCH_MSM8916
 	bool "Enable support for MSM8916"
 	select HAVE_ARM_ARCH_TIMER
+	select IOMMU_DMA
 
 config ARCH_MDM9615
 	bool "Enable support for MDM9615"
